# XBraidForUG4

./: CMakeLists.txt  README.md
libs/xbraid/examples/: ex-01  ex-01-adjoint  ex-01-expanded  ex-01-expanded-bdf2  ex-01-optimization  ex-01-refinement  ex-02  ex-04  ex-04-serial
src/: BraidVectorStruct.h  GFBraidApp.h  ITSGFBraidApp.h  MGFBraidApp.h  MemoryObserver.h  PBraid.h  PBraidApp.h  PBraidApp_impl.hh  RGFBraidApp.h  RGFBraidApp_impl.hh  Scriptor.h  SpaceTimeCommunicator.h  Talasma.h  Telvanni.h  UG4BraidApp.h  UG4BraidApp_impl.hh  XCommunicator.h  aux_user_data.h  fieldgenerator.cpp  fieldgenerator.h  trace_tools.h  trace_tools_config.h  xbraidforug4_plugin.cpp
src/tools/: Telvanni.h  trace_tools_config.h
